--- a/style.css
+++ b/style.css
@@ -1,194 +1,265 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap%27");
-body {
-  font-family: "raleway", sans-serif;
-}
-
 header {
-  background-color: #f38e58;
-  margin-left: -8px;
-  margin-right: -8px;
-  margin-top: -8px;
-  margin-bottom: 2%;
-}
-nav {
-  margin-left: 15%;
-  display: flex;
-  flex-direction: row;
-}
-ul {
-  margin-left: 1%;
-}
-button {
-  border: none;
-  border-radius: 10px;
-  padding-left: 2%;
-  padding-right: 2%;
-  height: 50px;
-  cursor: pointer;
-}
-#essaye {
-  margin-left: 20%;
-  background-color: #021f2e;
-  color: white;
-  border: none;
-}
-#login {
-  margin-left: 2%;
-  background-color: transparent;
-  color: white;
-  border: 3px solid white;
-}
-#essaye:hover {
-  background-color: rgba(2, 31, 46, 0.8);
-}
-#login:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-#submit:hover {
-  background-color: rgba(243, 142, 88, 0.5);
-}
-#cree:hover {
-  background-color: rgba(2, 31, 46, 0.8);
-}
-li {
-  list-style: none;
-  color: white;
-}
-#logo {
-  max-width: 100px;
-  margin-top: -10px;
+  position: absolute;
+  width: 1350px;
+  height: 400px;
+
+  background: #f38e58;
 }
 
 h1 {
-  color: white;
-  margin-top: 8%;
-  text-align: center;
-  font-size: 4.5em;
-}
+  position: absolute;
+  width: 422px;
+  height: 75px;
 
-h2 {
-  color: #57b4de;
-  text-align: left;
-}
+  margin-top: 221px;
+  margin-left: 474px;
 
-.parent {
-  font-family: "50", sans-serif;
-
-  display: flex;
-  flex-direction: row;
-}
-#droite {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 50%;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-#gauche {
-  padding-right: 10%;
-}
-input {
   font-family: "Raleway", sans-serif;
-  width: relative;
-  margin-bottom: 15px;
-  border-radius: 3px;
-  border: grey solid 1px;
-}
-textarea {
-  font-family: "Raleway", sans-serif;
-}
-span {
-  right: 0px;
-  margin-right: 0px;
-  margin-left: 250px;
-  margin-top: 10px;
-}
+  font-style: bold;
+  /* font-weight: 1600; */
+  font-size: 64px;
+  line-height: 75px;
+  /* line-height: 100%; */
 
-#submit {
-  background-color: #f38e58;
-  border: none;
-  color: white;
-  padding: 15px 32px;
   text-align: center;
+  vertical-align: top;
 
-  margin-right: 1px;
+  color: #ffffff;
 }
 
-p {
+.imglander {
+  position: absolute;
+  width: 135px;
+  height: 50px;
+
+  margin-top: 5px;
+  margin-left: 110px;
+}
+
+.menuhaut {
+  position: absolute;
+  width: 697px;
+  height: 28px;
+  margin-left: 300px;
+  margin-top: 30px;
+
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+
+  text-align: Left;
+  vertical-align: Top;
+
+  color: #ffffff;
+}
+
+.dayfree {
+  position: absolute;
+  width: 150px;
+  height: 40px;
+  margin-top: 23px;
+  margin-left: 975px;
+  z-index: 1;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
   text-align: center;
-  margin-right: auto;
-}
-a {
-  color: #f38e58;
-  text-decoration: none;
-}
-
-.articles {
-  height: 70px;
-}
-footer {
-  background: #404040;
-  position: relative;
-  left: 0;
-  bottom: 0;
-  margin: -8px;
-  width: inherit;
-  padding-right: 10px;
-}
-
-fotter > div,
-div {
-  margin-left: 60px;
-}
-#couleur {
-  color: white;
-  font-weight: lighter;
-}
-#cree {
-  background-color: #032030;
-  border: none;
-  color: #c1c1c1;
-  padding: 10px 35px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-right: 1px;
-  height: 70px;
-}
-.gras {
-  font-weight: bold;
-}
-#dernier {
-  background-color: #2c2c2c;
-  color: #c1c1c1;
-  margin-bottom: -8px;
-  position: relative;
-  left: 0;
-  bottom: 0;
-  margin-left: -60px;
-  right: 0;
-  width: inherit;
-  text-align: left;
-  padding: 5px;
-  margin-right: -10px;
-  padding-left: 10%;
-}
-.imagefotter {
   align-items: center;
-  height: 30px;
-  margin-right: 10px;
-  left: 0;
+  /* border: 1px solid green; */
+  color: #ffffff;
 }
-#test {
+
+.rectdayfree {
+  position: absolute;
+  width: 159px;
+  height: 40px;
+  margin-left: 965px;
+  margin-top: 23px;
+
+  fill: Solid;
+
+  background: #000000;
+  border-radius: 10px;
+}
+
+.login {
+  position: absolute;
+  width: 100px;
+  height: 40px;
+  margin-top: 23px;
+  margin-left: 1140px;
+
+  border: 3px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 10px;
+
+  stroke: Solid;
+  text-align: Inside;
+}
+
+.reachout {
+  position: absolute;
+  width: 260px;
+  height: 33px;
+  margin-top: 480px;
+  margin-left: 115px;
+
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 33px;
+
+  color: #56b4e3;
+}
+
+.lander {
+  position: absolute;
+  width: 260px;
+  height: 33px;
+  margin-top: 480px;
+  margin-left: 705px;
+
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 33px;
+
+  color: #56b4e3;
+}
+
+.goa {
+  position: absolute;
+  width: 504px;
+  height: 40px;
+  margin-top: 530px;
+  margin-left: 115px;
+
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 17px;
+  line-height: 20px;
+
+  color: #000000;
+}
+
+.firstname {
+  position: absolute;
+  width: 504px;
+  height: 40px;
+  margin-left: 115px;
+  margin-top: 615px;
+  padding-top: 7px;
+  padding-left: 10px;
+
+  font-family: Raleway;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 18px;
+  border: 2px solid #c8c9cd;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.firstname1 {
+  position: absolute;
+  width: 504px;
+  height: 40px;
+  margin-left: 115px;
+  margin-top: 685px;
+  padding-top: 7px;
+  padding-left: 10px;
+
+  font-family: Raleway;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 18px;
+  border: 2px solid #c8c9cd;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.firstname2 {
+  position: absolute;
+  width: 504px;
+  height: 40px;
+  margin-left: 115px;
+  margin-top: 755px;
+  padding-top: 7px;
+  padding-left: 10px;
+
+  font-family: Raleway;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 18px;
+  border: 2px solid #c8c9cd;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.firstname3 {
+  position: absolute;
+  width: 504px;
+  height: 40px;
+  margin-left: 115px;
+  margin-top: 825px;
+  padding-top: 7px;
+  padding-left: 10px;
+
+  font-family: Raleway;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 18px;
+  border: 2px solid #c8c9cd;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.firstname4 {
+  position: absolute;
+  width: 504px;
+  height: 135px;
+  margin-left: 115px;
+  margin-top: 895px;
+  padding-top: 7px;
+  padding-left: 10px;
+
+  font-family: Raleway;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 18px;
+  border: 2px solid #c8c9cd;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.footer {
+  position: absolute;
+  width: 1350px;
+  height: 265px;
+  margin-top: 1210px;
   margin-left: 0px;
+
+  background: #404040;
 }
-#logo {
-  display: flex;
-  flex-direction: row;
-  margin-left: -5px;
-}
-i {
-  margin: 5px;
+
+.footer1 {
+  position: absolute;
+  width: 1350px;
+  height: 40px;
+  margin-top: 1475px;
+  margin-left: 0px;
+  padding-top: 15px;
+  padding-left: 115px;
+
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 50;
+  font-size: 18px;
+  color: #979797;
+
+  background: #333333;
 }
