--- a/style.css
+++ b/style.css
@@ -165,9 +165,11 @@ footer {
 
 .rubrique1 {
   margin-left: 8%;
+  font-size: 16px;
 }
 .rubrique {
   margin-left: 2%;
+  font-size: 16px;
 }
 .rubrique-lien:hover {
   cursor: pointer;
