--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ h1 {
   margin-top: 8%;
   text-align: center;
   font-size: 4.5em;
+  margin-bottom:0%;
 }
 
 h2 {
@@ -170,7 +171,7 @@ footer {
   line-height: 15px;
 }
 .rubrique {
-  margin-left: 2%;
+  margin-left: 3%;
   font-size: 16px;
   line-height: 15px;
 }
